Changed dues customization switch and added notifications switch in insurance settings. Stylized insurance UI. Fixed a bug when deleting insurance infos. Added dues visualization in insurance page.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -609,13 +609,31 @@
     "description": "Total amount text"
   },
 
-  "customizeDues": "Customize dues:",
+  "customizeDues": "Customize dues",
   "@customizeDues": {
-    "description": "Customize dues: text"
+    "description": "Customize dues text"
   },
 
   "dueSpace": "Due ",
   "@dueSpace": {
     "description": "Due  text"
+  },
+
+  "duesCount": "{duesNumber,plural, =1{1 due} other{{duesNumber} dues}}",
+  "@duesCount": {
+    "placeholders": {
+      "duesNumber": {}
+    }
+  },
+
+  "spaceInSpace": " in ",
+  "@spaceInSpace": {
+    "description": " in  text"
+  },
+
+  "notifications": "Notifications",
+  "@notifications": {
+    "description": "Notifications text"
   }
+  
 }
