Fixed a bug on ios where images weren't recovered correctly after saving. Added deletion confirmation for both vehicles and maintenance. UI improvements.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -688,6 +688,16 @@
     "description": "Data not saved will be lost. text"
   },
 
+  "actionCantBeUndone": "This action cannot be undone.",
+  "@actionCantBeUndone": {
+    "description": "This action cannot be undone. text"
+  },
+
+  "delete": "Delete",
+  "@delete": {
+    "description": "Delete text"
+  },
+
   "reachedMaxEntry": "You've reached the vehicle limit in your garage.",
   "@reachedMaxEntry": {
     "description": "You've reached the vehicle limit in your garage. text"
